<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:layout_marginBottom="@dimen/layout_margin_bottom"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="153dp"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textSize="100sp" />

        <TextView
            android:id="@+id/tv_high_score"
            android:layout_width="135dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:text="@string/high_score_default"
            android:textSize="20sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/btn_new_game"
                android:layout_width="157dp"
                android:layout_height="90dp"
                android:text="@string/new_game"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn_reset_score"
                android:layout_width="161dp"
                android:layout_height="70dp"
                android:text="@string/reset_score"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_exit"
                android:layout_width="163dp"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>