<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sudeshi.tetris2.GameActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="10"
        android:background="#e8e8e8">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="32dp"
            android:paddingBottom="32dp"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_score"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/tv_current_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin_top"
                    android:text="@string/high_score"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/tv_high_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"/>
            </LinearLayout>
            <Button
                android:id="@+id/btn_restart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_restart"/>
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#000"/>

        <LinearLayout
            android:layout_width="259dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:orientation="vertical"
            android:translationX="3dp">
            <!-- Adding TetrisView -->
            <com.sudeshi.tetris2.view.TetrisView
                android:id="@+id/view_tetris"
                android:layout_width="match_parent"
                android:layout_height="569dp" />

            <Button
                android:id="@+id/btnRotate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginLeft="100dp"
                android:layout_weight="10"
                android:text="ROTATE" />

            <Button
                android:id="@+id/btnLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="LEFT" />

            <Button
                android:id="@+id/btnRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="RIGHT" />

            <Button
                android:id="@+id/btnDown"
                android:layout_width="151dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="DOWN" />

        </LinearLayout>
    </LinearLayout></androidx.constraintlayout.widget.ConstraintLayout>